--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "backbone": "~1.1.2",
     "Backbone.validateAll": "*",
     "marionette": "~2.4.1",
+    "admin-lte": "~2.3.0",
+    "highcharts-release": "~4.1.8",
     "almond": "~0.3.1",
     "r.js": "~2.1.11",
     "backbone.eventbinder": "~1.0.2"
