Fixed package.json + bower json

--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
-  "name": "MRB-Lite",
-  "version": "0.0.4",
+  "name": "Marionette-Admin-Lte",
+  "version": "0.0.1",
   "description": "",
   "keywords": [
     "requirejs",
     "boilerplate",
-    "marionettejs"
+    "marionettejs",
+    "admin-lte"
   ],
   "authors": [
-    "Jason Roeckle"
+    "Juan Gauna"
   ],
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "public/admin/js/libs",
